HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/KPMG_Daily_Health_Check__c.object-meta.xml
<CustomObject>
    <label>Daily Health Check</label>
    <nameField>
        <displayFormat>DHC-{00000}</displayFormat>
        <label>Daily Health Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>