HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Active__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>