HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Apex_Handler__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Apex_Handler__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>