HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>