HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Checker_Key__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Checker_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checker Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>