HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Detail_Fields__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>