HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>