HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Empty_Message__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Empty_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Empty Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>