HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Is_Count_Query__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Is_Count_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Count Query</label>
    <type>Checkbox</type>
</CustomField>