HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Label_Field__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Label_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>