HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Manual_Complete__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Manual_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Complete</label>
    <type>Checkbox</type>
</CustomField>