HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Metric_Keys__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Metric_Keys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Metric Keys</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>