HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Name__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>