HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Order_By__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Order_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>