HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Query_Type__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Query_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Query Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>