HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Red_Threshold__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Red_Threshold__c</fullName>
    <label>Red Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>