HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Row_Limit__c</fullName>
    <label>Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>