HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>KPMG_SObject_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SObject API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>