HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Sub_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Sub_Section_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>