HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/fields/KPMG_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Where_Clause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Where Clause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>