HCProject/force-app/main/default/objects/KPMG_Daily_Health_Check__c/listViews/Configurations.listView-meta.xml
<ListView>
    <fullName>Configurations</fullName>
    <columns>NAME</columns>
    <columns>KPMG_SObject_API_Name__c</columns>
    <columns>KPMG_Sub_Section_Label__c</columns>
    <columns>KPMG_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KPMG_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Configurations</label>
</ListView>